@@ -79,6 +79,11 @@ class PiccoloControl(PiccoloClientComponent):
 
         await self.a_get('pause')
         
+    async def abort(self):
+        """abort data acquisition"""
+
+        await self.a_get('abort')
+
     async def get_current_sequence(self):
         return await self.a_get('current_sequence')
 
