@@ -1,3 +1,6 @@
+2019-04-23 Magnus Hagdorn
+ * piccolo3/client/Piccolo.py: add method to abort acquisition
+
 2019-04-22 Magnus Hagdorn
  * piccolo3/client/Piccolo.py: add method to pause server
 
